# otus_cpp

./: .travis.yml  CMakeLists.txt  README.md  bintray-descriptor.json  gtest_version.cpp  main.cpp  test_version.cpp
